@@ -1,0 +1,10 @@
+<html>
+<body>
+
+<form action="http://localhost/" method="post" enctype="multipart/form-data">
+
+<input type="file" name="upload" value="MANIFEST" />
+<input type="Submit" name="submit" value="Submit" label="Sumbit" />
+</form>
+</body>
+
